# lammps-user-backmapping

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: cpp-ci.yml  docs.yml  python-ci.yml
docs/: getting-started.md  index.md  large-scale-examples.md  settings-reference.md  theory.md  tutorial-new-system.md
docs/cli/: backmap-prep.md
docs/components/: angle-styles.md  bond-styles.md  fix-backmap.md  pair-backmap.md
examples/: README.md
examples/dodecane/: README.md  cg_conf.gro  dodecane.data  in.dodecane  in.dodecane_movie  settings.yaml  table_A_A.table  table_A_B.table  table_A_B.xvg  table_B_B.table  table_B_B.xvg  table_b1.xvg  topol_aa.top  verify_output.py  visualize_backmap_movie.py
examples/melamine/: README.md  cg_conf.gro  in.melamine  melamine.data  settings.yaml  table_A_A.table  table_b1.table  topol_cg.top
examples/pe/: README.md  cg_conf.gro  in.pe  (+6 more)
openspec/: project.md
python/: README.md  pyproject.toml
python/src/backmap_prep/: __init__.py  builder.py  cli.py  schema.py  table_converter.py  units.py  writers.py
python/src/backmap_prep/parsers/: __init__.py  gro_parser.py  top_parser.py
python/tests/: conftest.py  test_builder.py  test_cli.py  test_examples.py  test_gro_parser.py  test_schema.py  test_table_converter.py  test_top_parser.py  test_units.py  test_writers.py
scripts/: validate-large-scale-prep.sh
src/: CMakeLists.txt  README  angle_backmap_harmonic.cpp  angle_backmap_harmonic.h  backmap_lambda.h  bond_backmap_harmonic.cpp  bond_backmap_harmonic.h  bond_backmap_table.cpp  bond_backmap_table.h  fix_backmap.cpp  fix_backmap.h  pair_backmap.cpp  pair_backmap.h
(+134 files in other folders)
