[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backmap-prep"
version = "0.1.0"
description = "Generate LAMMPS input files for CG-to-AT backmapping simulations"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Jakub Krajniak", email = "jkrajniak@gmail.com" },
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
backmap-prep = "backmap_prep.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.15",
    "types-PyYAML",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backmap_prep"]

# --- ruff ---
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "PT",   # flake8-pytest-style
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "RET",  # flake8-return
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backmap_prep"]

# --- mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
